# TTB

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  local.Dockerfile  production.Dockerfile
commands/: stock.rs
commands-other/: helpers.rs
migrations/2024-03-02-005821_create_chatter/: up.sql
migrations/2024-03-17-031715_add_last_seen_column/: down.sql  up.sql
migrations/2024-03-23-202630_create_duel/: down.sql  up.sql
migrations/2024-04-21-224708_change_twitch_id_type/: down.sql  up.sql
migrations/2024-04-21-232912_update_duel_player_fields/: down.sql  up.sql
migrations/2024-04-21-234429_update_duel_winner_field/: down.sql  up.sql
migrations/2024-08-30-221302_add_status_and_timestamps_to_duels/: down.sql  up.sql
migrations/2024-08-30-231537_add_question_to_duel/: down.sql  up.sql
migrations/2024-08-31-214907_add_function_to_update_update_at/: down.sql  up.sql
migrations/2024-08-31-235149_add_accepted_duels_table/: down.sql  up.sql
migrations/2024-09-01-005823_add_chatter_id_to_duel/: down.sql  up.sql
migrations/2024-09-06-201839_add_lurker_table/: down.sql  up.sql
migrations/2024-09-06-204256_add_lurk_time_to_chatter/: down.sql  up.sql
migrations/2024-09-11-225533_create_question_table/: down.sql  up.sql
migrations/2024-09-14-032919_add_unique_constraint_on_category_name/: down.sql  up.sql
migrations/2024-11-30-233958_add_stocks_and_shares/: down.sql  up.sql
migrations/2024-12-01-005730_add_chatter_fk_to_shares/: down.sql  up.sql
migrations/2024-12-01-011018_add_stock_fk_to_shares/: down.sql  up.sql
migrations/2024-12-01-013326_add_roi_colum_to_stock/: down.sql  up.sql
migrations/2025-01-03-220821_add_losers_pool/: down.sql  up.sql
scripts/: fetch_and_start_prod.sh  run.sh  startup.sh
src/: chatter.rs  commands.rs  db.rs  duel.rs  helpers.rs  lib.rs  main.rs  messaging.rs  models.rs  schema.rs  seed.rs  state.rs  stock.rs
src/commands/: stock.rs
src/content/: mod.rs  (+1 more)
trade-other/: helpers.rs
(+4 files in other folders)
