[package]
name = "duel_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = {version="4.4.18", features=["derive"]}
dotenv = "0.15.0"
tmi = "0.4.0"
tokio = {version = "1.35.1", features = ["full"]} 
tracing-subscriber = "0.3.18"

