[package]
name = "duel_bot"
version = "0.1.0"
edition = "2021"
default-run = "duel_bot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.23"
tmi = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
twitch_api2 = { version = "0.6.1", features = [
  "helix",
  "reqwest",
  "unsupported",
] }
twitch_oauth2 = { version = "0.12.9", features = ["client"] }
log = "0.4.21"
malachite = { version = "0.6.1", features = ["serde"] }


[[bin]]
name = "duel_bot"
path = "src/main.rs"

[[bin]]
name = "seed_starter_categories"
path = "src/bin/seed_starter_categories.rs"

[[bin]]
name = "seed_starter_questions"
path = "src/bin/seed_starter_questions.rs"
